--- a/repomgmt/templates/base.html
+++ b/repomgmt/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>OpenStack@Cisco</title>
+    <title>buildd 9000</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -38,7 +38,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#">OpenStack@Cisco</a>
+                <a class="brand" href="#">buildd 9000</a>
                 <div class="nav-collapse collapse">
                   <ul class="nav">
                     <li><a href="#">Home</a></li>
