Don't claim to be Cisco :-P
Change-Id: I3dfeb5e71be81e80691b9c01b413297a35933b86

--- a/repomgmt/templates/front.html
+++ b/repomgmt/templates/front.html
@@ -3,7 +3,8 @@
 {% block content %}
   <div class="hero-unit">
     <h1>Welcome!</h1>
-    <p>This fine system handles a lot of the grunt work of maintaining the Cisco OpenStack edition.
+    <p>This fine system handles a lot of the grunt work of maintaining Debian
+    build infrastructure.
     It <ul>
             <li>controls build infrastructure,</li>
             <li>handles archive management, and</li>
