Fix home link, add /admin link (likely temporary)
Change-Id: I07aba65cb61e44e98531d04b60d647dd80498ab3

--- a/repomgmt/templates/base.html
+++ b/repomgmt/templates/base.html
@@ -38,10 +38,10 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#">buildd 9000</a>
+                <a class="brand" href="/">buildd 9000</a>
                 <div class="nav-collapse collapse">
                   <ul class="nav">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/">Home</a></li>
                   </ul>
                 </div><!--/.nav-collapse -->
                 <ul class="nav pull-right">
@@ -74,6 +74,8 @@
               <li class="nav-header">Documentation</li>
               <li><a href="{% url "docs_api" %}">API</a></li>
               <li><a href="{% url "docs_workflow" %}">Workflow</a></li>
+              <li class="nav-header">Other</li>
+              <li><a href="/admin">Administration</a></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
