Further de-branding
Change-Id: I44b53eedb5ee778e2c501e3a16fe746281a41b1b

--- a/repomgmt/templates/registration/registration_form.html
+++ b/repomgmt/templates/registration/registration_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% block content %}
-<p>Register with OpenStack@Cisco Repository Management system</p>
+<p>Register with buildd9000 Repository Management system</p>
 <form action="" method="post">
 {% csrf_token %}
 {{ form.as_p }}
