--- a/puppet/repomgmt/templates/urls.py.erb
+++ b/puppet/repomgmt/templates/urls.py.erb
@@ -1,7 +1,12 @@
+form django.contrib import admin
 from django.conf.urls import patterns, include, url
 import repomgmt.urls
 
+admin.autodiscover()
+
 urlpatterns = patterns('',
+    url(r'^admin/doc/', include('django.contrib.admindocs.urls')),
+    url(r'^admin/', include(admin.site.urls))
     url(r'^accounts/', include('registration.backends.simple.urls')),
     url(r'', include('repomgmt.urls'))
 )
